--- a/progressive-nav.html
+++ b/progressive-nav.html
@@ -1,146 +1,9 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<style>
-		nav {
-		  align-items: center;
-		  background: #f2f2f2;
-		  display: flex;
-		  height: 60px;
-		  position: relative;
-		}
-		nav h1 {
-		  align-items: center;
-		  align-self: stretch;
-		  color: #404040;
-		  display: flex;
-		  font-weight: bold;
-		  padding: 0 1.5rem;
-		}
-		nav button {
-		  align-self: stretch;
-		  background: #c8c8c8;
-		  border: 0;
-		  color: #404040;
-		  font-size: 0.9rem;
-		  font-weight: bold;
-		  outline: 0;
-		  padding: 0 1rem 0 1.5rem;
-		  transition: all .4s ease-out;
-		}
-		nav button.hidden {
-		  border-right: 0.5rem solid #b6b6b6;
-		  overflow: hidden;
-		  padding: 0;
-		  transition: none;
-		  width: 0;
-		}
-		nav button::after {
-		  align-items: center;
-		  background: #9f9f9f;
-		  border-radius: 50%;
-		  box-shadow: 0 0 1px 0 rgba(0,0,0,0.8);
-		  color: #f2f2f2;
-		  content: attr(count);
-		  display: inline-flex;
-		  font-size: 14px;
-		  height: 30px;
-		  justify-content: center;
-		  line-height: 14px;
-		  margin-left: 1rem;
-		  margin-right: calc(-1rem + -8px);
-		  width: 30px;
-		}
-		ul.links {
-		  display: flex;
-		  flex: 1;
-		  justify-content: flex-end;
-		  list-style:none;
-		  overflow: hidden;
-		}
-		ul.links li {
-		  flex: none;
-		  padding: 1rem;
-		}
-		ul.links li a {
-		  color: #404040;
-		}
-		ul.hidden-links {
-		  background: #d8d8d8;
-		  position: absolute;
-		  right: 0;
-		  top: 100%;
-		}
-		ul.hidden-links li a {
-		  color: #404040;
-		  padding-right: 1rem;
-		}
-		ul.hidden-links.hidden {
-		  display: none;
-		}
-		ul.hidden-links li {
-		  padding: 1rem;
-		}
-	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(function() {
-			// Mobile Nav
-			var $nav = $('nav');
-			var $btn = $('nav button');
-			var $vlinks = $('nav .links');
-			var $hlinks = $('nav .hidden-links');
-			
-			var numOfItems = 0;
-			var totalSpace = 0;
-			var breakWidths = [];
-			
-			// Get initial state
-			$vlinks.children().outerWidth(function(i, w) {
-				totalSpace += w;
-				numOfItems += 1;
-				breakWidths.push(totalSpace);
-			});
-			
-			var availableSpace, numOfVisibleItems, requiredSpace;
-			
-			function check() {
-				
-				// Get instant state
-				availableSpace = $vlinks.width() - 10;
-				numOfVisibleItems = $vlinks.children().length;
-				requiredSpace = breakWidths[numOfVisibleItems - 1];
-				
-				// There is not enought space
-				if (requiredSpace > availableSpace) {
-					$vlinks.children().last().prependTo($hlinks);
-					numOfVisibleItems -= 1;
-					check();
-					// There is more than enough space
-					} else if (availableSpace > breakWidths[numOfVisibleItems]) {
-					$hlinks.children().first().appendTo($vlinks);
-					numOfVisibleItems += 1;
-				}
-				// Update the button accordingly
-				$btn.attr("count", numOfItems - numOfVisibleItems);
-				if (numOfVisibleItems === numOfItems) {
-					$btn.addClass('hidden');
-				} else $btn.removeClass('hidden');
-			}
-			
-			// Window listeners
-			$(window).resize(function() {
-				check();
-			});
-			
-			$btn.on('click', function() {
-				$hlinks.toggleClass('hidden');
-			});
-			
-			check();
-			
-		});
-	</script>
+	<link href="progressive-nav.css" rel="stylesheet">
+	<script src="progressive-nav.js" type="text/javascript"></script>
 </head>
 
 <body>
