--- a/index.html
+++ b/index.html
@@ -1,72 +1,64 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Progressive-nav : Menu that when in mobile responsive mode consumes menu items one at a time with a numbered drop-down button instead of a hamburger menu.">
+<head>
+	<meta charset='utf-8'>
+	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<title>Progressive Nav</title>
+	<meta name="description" content="Progressive Nav : Progressive responsive menu based on Flex and jQuery. In mobile view, , menu items on the right side of the menu are progressively consumed by a button that shows the number of hidden menu items.">
+	<link rel="stylesheet" type="text/css" media="screen" href="https://chriscather.github.io/stylesheets/stylesheet.css">
+</head>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<body>
 
-    <title>Progressive-nav</title>
-  </head>
+<!-- HEADER -->
+<div id="header_wrap" class="outer">
+	<header class="inner">
+		<a id="forkme_banner" href="https://github.com/chriscather/Progressive-Nav">View on GitHub</a>
+		<h1 id="project_title">Progressive Nav</h1>
+		<h2 id="project_tagline">Progressive responsive menu based on Flex and jQuery.</h2>
+		<section id="downloads">
+			<a class="zip_download_link" href="https://github.com/chriscather/Responsive-Toggle-Nav/zipball/master">Download this project as a .zip file</a>
+			<a class="tar_download_link" href="https://github.com/chriscather/Responsive-Toggle-Nav/tarball/master">Download this project as a tar.gz file</a>
+		</section>
+	</header>
+</div>
 
-  <body>
+<!-- MAIN CONTENT -->
+<div id="main_content_wrap" class="outer">
+	<div class="inner">
+		<article id="main_content">
+			<p>According to the <strong>Nielsen Norman Group</strong>, the standard of using <a href="https://www.nngroup.com/articles/hamburger-menus/" target="_blank">"hamburger" style menus on websites for mobile devices reduces usability</a>. To solve this, this menu while in a mobile view, menu items on the right side of the menu are progressively "consumed" by a button that shows the number of hidden menu items.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/chriscather/Progressive-Nav">View on GitHub</a>
+			<h3>Minimal</h3>
+			<p>The code for this menu system is minimal. How minimal? Most responsive meny system have two sets of mark-up, one for the desktop version and one for the mobile version. The code for this component only has one set up mark-up. The only "hidden" item is the Menu button for the mobile view.</p>
 
-          <h1 id="project_title">Progressive-nav</h1>
-          <h2 id="project_tagline">Menu that when in mobile responsive mode consumes menu items one at a time with a numbered drop-down button instead of a hamburger menu.</h2>
+			<h3>Flex Responsive</h3>
+			<p>This menu system is fully responsive. The CSS for this menu is short because it utilizes the power of the Flex properties. This allows a fully developed menu system with far less CSS than would otherwise be possible.</p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/chriscather/Progressive-Nav/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/chriscather/Progressive-Nav/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+			<h3>jQuery</h3>
+			<p>This menu system is compatible with jQuery libraries back to 1.7. If your website is already using jQuery, than you only need to add a few lines of javascript to make this menu system work.</p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+			<p><a href="http://codepen.io/chriscather/pen/Nbqxqa" target="_blank">See Progressive Nav in action!</a></p>
+		</article>
+		<aside>
+			<h3><a href="https://chriscather.wordpress.com" target="_blank">Website Portfolio</a></h3>
+			<h3>Development Portfolio</h3>
+			<ul>
+				<li><a href="https://chriscather.github.io">Home</a></li>
+				<li><a href="https://chriscather.github.io/Progressive-Nav">Progressive Nav</a></li>
+				<li><a href="https://chriscather.github.io/Responsive-Toggle-Nav">Responsive Toggle Nav</a></li>
+			</ul>
+		</aside>
+	</div>
+</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<!-- FOOTER  -->
+<div id="footer_wrap" class="outer">
+	<footer class="inner">
+		<p class="copyright">Progressive Nav maintained by <a href="https://github.com/chriscather">Chris Cather</a></p>
+	</footer>
+</div>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Progressive-nav maintained by <a href="https://github.com/chriscather">chriscather</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
